--- a/.github/workflows/backfill_signatures.yml
+++ b/.github/workflows/backfill_signatures.yml
@@ -8,8 +8,12 @@ on:
             required: false
             default: 10000
 jobs:
+    
     fetch_bottles:
         runs-on: ubuntu-latest
+        permissions:
+            id-token: write # for `generate build provenance`
+            contents: write # for `generate build provenance`
         steps:
             - name: Set up Homebrew
               id: set-up-homebrew
@@ -18,37 +22,23 @@ jobs:
             - name: Tap brew verify
               id: tap-brew-verify
               run: brew tap trailofbits/homebrew-brew-verify
-        
-            - name: Download state artifact
-              uses: actions/download-artifact@v2
-              with:
-                name: state
-                path: state
-              continue-on-error: true  # Continue if the state artifact does not exist
 
-            - name: Read starting line number
-              id: set_state
+            - name: Download bottles
+              id: download-bottles
               run: |
-                if [[ -f state/line_number.txt ]]; then
-                  echo "State file found, setting START_LINE."
-                  START_LINE=$(cat state/line_number.txt)
-                  echo "START_LINE=$START_LINE" >> $GITHUB_ENV
-                else
-                  echo "State file not found, starting from line 0."
-                  echo "START_LINE=" >> $GITHUB_ENV
-                fi
-      
-            - name: Process bottles
-              run: |
-                END_LINE=$((START_LINE + 10000))  
-                sed -n "${START_LINE},${END_LINE}p;${END_LINE}q" scripts/tags_to_sign.txt | while IFS=' ' read -r arg1 arg2; do
-                  echo "$arg1" "$arg2"
-                done
-                echo "New START_LINE=$(($END_LINE))" >> state/line_number.txt  # Update starting line for next run
-              working-directory: ${{ env.HOMEBREW_PREFIX }}/Library/Taps/trailofbits/homebrew-brew-verify/scripts
-      
-            - name: Upload new state artifact
-              uses: actions/upload-artifact@v2
+                python3 scripts/download_bottles.py --num_lines ${{ inputs.number_of_bottles }} >> "$GITHUB_OUTPUT"
+                echo "new_line_number=$(cat scripts/line_number.txt)" >> "$GITHUB_OUTPUT"
+            
+            - name: generate build provenance
+              uses: github-early-access/generate-build-provenance@main
               with:
-                name: state
-                path: state/line_number.txt
+                subject-path: '${{steps.download-bottles.outputs.artifact_path}}'
+            
+            - uses: actions/checkout@v4
+            - run: |
+                echo '${{steps.download-bottles.outputs.new_line_number}}' > scripts/line_number.txt
+                git config user.name github-actions
+                git config user.email github-actions@github.com
+                git add scripts/line_number.txt
+                git commit -m "CI: Update current line number to sign."
+                git push
